<resources>
    <string name="app_name">Super Wallet</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="total">Total</string>
    <string name="zero_balance">0.00</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="repeat_password">repeat password</string>
    <string name="email">Email</string>
    <string name="cancel">Cancel</string>
    <string name="transfer">Transfer</string>
    <string name="date">Date</string>
    <string name="account">Account</string>
    <string name="category">Category</string>
    <string name="amount">Amount</string>
    <string name="info">Info</string>
    <string name="save">Save</string>
    <string name="assets">Assets</string>
    <string name="liabilities">Liabilities</string>
    <string name="edit">Edit</string>
    <string name="accounts">Accounts</string>
    <string name="drawer_item_day">Day</string>
    <string name="drawer_item_week">Week</string>
    <string name="drawer_item_month">Month</string>
    <string name="drawer_item_year">Year</string>
    <string name="drawer_item_choose_date">Choose date</string>
    <string name="settings">Settings</string>
    <string name="add_new_category_string">Add New Category</string>
    <string name="delete_string">Delete</string>
    <string name="home"> Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="place">Place</string>
    <string name="place_text">Pick place to know you spend the most…</string>
    <string name="attachments">Attachments</string>
    <string name="attachments_text">Take a picture of a receipt orr add a file from your device</string>
    <string name="name_text">Name</string>
    <string name="description_text">Description</string>
    <string name="categoryAdd_add_button_text">Add</string>
    <string name="categoryAdd_cancel_button_text">Cancel</string>
    <string name="categoryAdd_income_text">Income</string>
    <string name="categoryAdd_expense_text">Expense</string>
    <string name="choose_icon_cancel_button">Cancel</string>
    <string name="enter_category_name">Enter category name.</string>
    <string name="enter_category_description_here">Enter description here.</string>
    <string name="add_new_account">Add new account</string>
    <string name="enter_account_name_hint">Enter account name.</string>
    <string name="enter_account_description_hint">Enter description here…</string>
    <string name="accountAdd_cancel_button_text">Cancel</string>
    <string name="accountAdd_add_button_text">Add</string>
    <string name="accountAdd_radio_text_cash">Cash</string>
    <string name="accountAdd_radio_text_account">Bank Account</string>
    <string name="accountAdd_radio_text_card">Card</string>
    <string name="expand_arrow_icon">Expand arrow icon</string>
    <string name="negative_amount_toast">Transaction cannot be negative or zero!</string>
    <string name="left_arrow_statistics_date_change">Left arrow statistics date change</string>
    <string name="right_arrow_statistics_date_change">Right arrow statistics date change</string>
    <string name="menu">Menu</string>
    <string name="delete_transaction">Delete transaction</string>
    <string name="cat_icon">Category icon</string>

</resources>
