<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_account_modifier"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pesho.superwallet.AccountModifierActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/name_text"
            />

        <EditText
            android:id="@+id/accountAdd_account_name_ET"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:hint="@string/enter_account_name_hint"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/description_text"
            />

        <EditText
            android:id="@+id/accountAdd_account_description_ET"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:hint="@string/enter_account_description_hint"
            />

    </LinearLayout>

    <RadioGroup
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        >

        <RadioButton
            android:id="@+id/accountAdd_radio_cash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accountAdd_radio_text_cash"
            android:onClick="onRadioButtonClicked"
            />

        <RadioButton
            android:id="@+id/accountAdd_radio_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accountAdd_radio_text_account"
            android:onClick="onRadioButtonClicked"
            />

        <RadioButton
            android:id="@+id/accountAdd_radio_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accountAdd_radio_text_card"
            android:onClick="onRadioButtonClicked"
            />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle"
        >

        <Button
            android:id="@+id/accountAdd_cancel_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/accountAdd_cancel_button_text"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_margin="5dp"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/accountAdd_add_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/accountAdd_add_button_text"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_margin="5dp"
            style="?android:attr/buttonBarButtonStyle"
            />

    </LinearLayout>

</LinearLayout>
