<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.pesho.superwallet.SecondPageAddingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        >
        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/back"
            android:background="@color/transparent"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            />
        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/save"
            android:background="@color/transparent"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:background="@color/closeToPrimary"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/description"
            android:textSize="@dimen/addt_currency_text_size"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:gravity="center"
            android:id="@+id/addt_description_tv"
            />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/addt_account_spinner"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/addt_date_tv"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:gravity="bottom|left"
                    android:textSize="@dimen/addt_currency_text_size"
                    android:text="@string/place"

                />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="bottom|left"
                    android:text="@string/place_text"
                    />
            </LinearLayout>
            <ImageButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:src="@drawable/place"
                android:id="@+id/addt_place_button"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:gravity="bottom|left"
                    android:textSize="@dimen/addt_currency_text_size"
                    android:text="@string/attachments"

                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="bottom|left"
                    android:text="@string/attachments_text"
                    />
            </LinearLayout>
            <ImageButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:src="@drawable/photo"
                android:id="@+id/addt_attachments_button"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
